--- a/src/mobile/android/app/src/main/res/values/strings.xml
+++ b/src/mobile/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,68 @@
 <resources>
     <string name="app_name">PlopMessenger</string>
+
+
+    <string name="bottom_chats">Chats</string>
+    <string name="bottom_people">People</string>
+    <string name="bottom_setting">Setting</string>
+
+    <string name="initial_email_et">이메일을 입력해주세요</string>
+    <string name="initial_password_et">패스워드를 입력해주세요</string>
+
+    <string name="login_login_btn">로그인</string>
+    <string name="login_signUp_btn">새 계정 만들기</string>
+    <string name="login_find">아이디 / 비밀번호 찾기</string>
+
+    <string name="signup_create_btn">계정 생성</string>
+
+    <string name="chats_title">Chat</string>
+    <string name="people_title">People</string>
+
+    <string name="people_friend_request_subtitle">친구 요청</string>
+    <string name="people_friend_subtitle">친구</string>
+
+    <string name="people_accept_btn">수락</string>
+    <string name="people_deny_btn">거절</string>
+
+    <string name="setting_system_subtitle">시스템</string>
+    <string name="setting_account_subtitle">계정</string>
+
+    <string name="setting_dark_mode_btn">다크모드</string>
+    <string name="setting_alarm_btn">알림 및 소리</string>
+    <string name="setting_active_btn">활동 상태</string>
+
+    <string name="setting_profile_btn">프로필 편집</string>
+    <string name="setting_logout_btn">로그아웃</string>
+    <string name="setting_withdraw_btn">회원탈퇴</string>
+
+    <string name="chat_info_add_group_btn">와 그룹채팅 만들기</string>
+    <string name="chat_info_add_member_btn">사용자 추가하기</string>
+    <string name="chat_info_alarm_btn">알림 및 소리</string>
+    <string name="chat_info_exit_btn">대화방 나가기</string>
+
+    <string name="add_chat_member_top_bar">Add Member</string>
+    <string name="add_chat_member_cancel_btn">취소</string>
+    <string name="add_chat_member_add_btn">초대하기</string>
+    <string name="add_chat_member_friend_subtitle">친구</string>
+
+    <string name="add_chat_top_bar">New Message</string>
+    <string name="add_chat_create_group_bar">Create a New Group</string>
+    <string name="add_chat_cancel_btn">취소</string>
+    <string name="add_chat_friend_subtitle">친구</string>
+
+    <string name="add_chat_group_top_bar">New Message</string>
+    <string name="add_chat_group_cancel_btn">취소</string>
+    <string name="add_chat_group_add_btn">만들기</string>
+    <string name="add_chat_group_friend_subtitle">친구</string>
+
+    <string name="add_friend_top_bar">Add Friend</string>
+    <string name="add_friend_cancel_btn">취소</string>
+    <string name="add_friend_friend_subtitle">친구</string>
+    <string name="add_friend_request_btn">친구추가</string>
+    <string name="add_friend_requested_btn">요청됨</string>
+
+    <string name="chat_add_btn">Add</string>
+    <string name="chat_edit_btn">Name</string>
+    <string name="chat_member_btn">Members</string>
+
 </resources>
