feat: add image send
[Feat]: add image send

1. 이미지 리스트 보여주기
2. 카메라 연결
3. 이미지 전송 관련 UI

--- a/src/mobile/android/app/src/main/res/values/strings.xml
+++ b/src/mobile/android/app/src/main/res/values/strings.xml
@@ -64,5 +64,6 @@
     <string name="chat_add_btn">Add</string>
     <string name="chat_edit_btn">Name</string>
     <string name="chat_member_btn">Members</string>
+    <string name="chat_image_send_btn">보내기</string>
 
 </resources>
