[Android] Feature/pref (#42)
### [Feat]: add pref use case

### [Feat]: add set active use case

### [Feat]: add dark mode in setting

### [Feat]: edit profile

### [Feat]: add logout and withdrawal

--- a/src/mobile/android/app/src/main/res/values/strings.xml
+++ b/src/mobile/android/app/src/main/res/values/strings.xml
@@ -34,6 +34,16 @@
     <string name="setting_profile_btn">프로필 편집</string>
     <string name="setting_logout_btn">로그아웃</string>
     <string name="setting_withdraw_btn">회원탈퇴</string>
+    <string name="setting_profile_top_bar">프로필 편집</string>
+    <string name="setting_profile_save_btn">저장</string>
+    <string name="setting_profile_dialog">저장하시겠습니까?</string>
+    <string name="setting_profile_dialog_dismiss">취소</string>
+    <string name="setting_profile_dialog_ok">저장</string>
+
+    <string name="setting_profile_logout_dialog">로그아웃 하시겠습니까?</string>
+    <string name="setting_profile_logout_ok">로그아웃</string>
+    <string name="setting_profile_withdraw_dialog">정말 탈퇴 하시겠습니까?</string>
+    <string name="setting_profile_withdrawal_ok">탈퇴</string>
 
     <string name="chat_info_add_group_btn">와 그룹채팅 만들기</string>
     <string name="chat_info_add_member_btn">사용자 추가하기</string>
