--- a/src/mobile/android/app/src/main/res/values/strings.xml
+++ b/src/mobile/android/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="login_login_btn">로그인</string>
     <string name="login_signUp_btn">새 계정 만들기</string>
     <string name="login_find">아이디 / 비밀번호 찾기</string>
+    <string name="login_dialog_ok">확인</string>
+    <string name="login_dialog_title">아이디 또는 비밀번호가 잘못되었습니다.</string>
 
     <string name="signup_create_btn">계정 생성</string>
     <string name="signup_dialog_ok">확인</string>
