--- a/src/mobile/android/app/src/main/res/values/strings.xml
+++ b/src/mobile/android/app/src/main/res/values/strings.xml
@@ -21,6 +21,13 @@
     <string name="signup_dialog_ok">확인</string>
     <string name="signup_dialog_success">성공적으로 회원가입 되었습니다.</string>
 
+    <string name="find_password_email_et">이메일을 입력해주세요</string>
+    <string name="find_password_pwd_et">새로운 비밀번호를 입력해주세요</string>
+    <string name="find_password_id_et">아이디를 입력해주세요</string>
+    <string name="find_password_create_btn">비밀번호 변경</string>
+    <string name="find_password_dialog_success">성공적으로 비밀번호가 변경되었습니다.</string>
+    <string name="find_password_dialog_ok">확인</string>
+
     <string name="chats_title">Chat</string>
     <string name="people_title">People</string>
 
